# udp_mutlicast_application

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clang-format.sh.in
adr/: README.md
app/: CMakeLists.txt  QPushButton.pro  dialog.cpp  dialog.h  dialog.ui  udp_receiver.cpp  udp_sender.cpp  udp_sender_receiver.h
benchmarks/: CMakeLists.txt  EndiannessBench.cpp
examples/: CMakeLists.txt  command_line_parser.cpp  command_line_parser_example.cpp  udp_multicast_example.cpp
include/: chat_message.h  parser.h  udp_multicast.h  udp_sender_receiver.h
src/: CMakeLists.txt  application.cpp  config.h.in  receiver.cpp  sender.cpp  udp_multicast.cpp  udp_sender_receiver.cpp
tests/: CMakeLists.txt
